[package]
name = "brownian-motion"
version = "0.1.0"
edition = "2021"
authors = ["Данило Вітковський; ІС-31мн"]
description = "Simulation of Brownian motion of particles in a crystal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
