[package]
name = "brownian-motion"
version = "0.1.0"
edition = "2021"
authors = ["Данило Вітковський; ІС-31мн"]
description = "Simulation of Brownian motion of particles in a crystal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
rand = "0.8.5"
